<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleDialogChangePlan"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/p1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/p1"
        android:id="@+id/des"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/txtDialohChangePlan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteBtn"
            android:text="@string/btnDeletePlan"
            android:backgroundTint="#ED4A4A"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChangeDialogPlan"
            android:id="@+id/editBtn"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#51A1D8"/>


    </LinearLayout>

</RelativeLayout>