<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleChangePass"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/txt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:height="48dp"
        android:hint="@string/passOld"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/oldPassword"
        android:background="@drawable/bg_input"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPassword"
        android:height="48dp"
        android:hint="@string/passNew"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/newPassword"
        android:background="@drawable/bg_input"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPassword"
        android:layout_marginTop="26dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="داخستن"
            android:id="@+id/exit"
            android:backgroundTint="#676767"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangePassBtn"
            android:backgroundTint="@color/success"
            android:layout_marginLeft="10dp"
            android:id="@+id/changed"/>

    </LinearLayout>

</RelativeLayout>