<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleRecoverPass"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:id="@+id/txt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/RecEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/enterEmail"
        android:background="@drawable/bg_input"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RecEmail"
        android:layout_marginTop="30dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="داخستن"
            android:id="@+id/exit"
            android:layout_marginRight="10dp"
            android:backgroundTint="#606060"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bardawambonBtn"
            android:backgroundTint="@color/success"
            android:id="@+id/ok"/>
    </LinearLayout>

</RelativeLayout>