<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemChangeName"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:id="@+id/changeName"
        android:layout_marginTop="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/changeName"
        android:layout_marginTop="10dp"
        android:id="@+id/view1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changePassword"
        android:layout_below="@+id/view1"
        android:text="@string/itemChangePass"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/changePassword"
        android:layout_marginTop="10dp"
        android:id="@+id/view3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:layout_below="@+id/view3"
        android:text="@string/logout"
        android:textColor="#D34343"
        android:textSize="22sp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/logout"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>